[package]
name = "helius-ws-client"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0.11"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"]  }
futures-util = "0.3.0"
url = "2.0"
redis = { version = "0.28.2", features = ["tokio-comp"] }
tungstenite = "0.26.1"


